# InductiveFieldSupplemental

./: .gitignore  Mutual inductance between circular circuits.nb  Mutual inductance between rectangular circuits.nb  README.md
WireSelfInductance/: CMakeLists.txt  CircularMesh.cpp  CircularMesh.h  MeshedStraightWireSelfInductance.cpp  MeshedStraightWireSelfInductance.h  main.cpp
mutual-inductance/: README.md  Rectangular-circuits.nb
mutual-inductance/MatLab/: CircularCircuitComparison.m  CircularCircuitTests.m  CircularCircuitsPaperExample.m  FaradayEmfForCircularCircuits.m  FaradayEmfForRectangularCircuits.m  InductiveFieldEmfForCircularCircuits.m  InductiveFieldEmfForRectangularCircuits.m  README.md  RectangularCircuitComparison.m  RectangularCircuitTests.m  RectangularCircuitWireEmfs.m  RectangularCircuitsCommon.m  RectangularCircuitsPaperExample.m
mutual-inductance/Mathematica/: Circular-circuits.nb  Electric field vector plots.nb  README.md  Rectangular-circuits.nb
self-inductance/: CircularMesh.cpp  MeshedStraightWireSelfInductance.h  README.md  RosaStraightWireSelfInductance.h  SelfInductanceDefs.h  main.cpp
